# Project.EXE

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  gradlew  replit.md  server.js  settings.gradle.kts
.github/workflows/: build.yml  main.yml
ProjectEXE/: replit.md
ProjectEXE/.github/workflows/: main.yml
ProjectEXE/app/: build.gradle.kts
ProjectEXE/app/src/main/cpp/: CMakeLists.txt
ProjectEXE/app/src/main/kotlin/com/projectexe/: ProjectEXEApplication.kt
ProjectEXE/app/src/main/res/drawable/: ic_launcher.xml  ic_notification.xml
ProjectEXE/app/src/main/res/layout/: activity_settings.xml  include_role_block.xml
ProjectEXE/app/src/main/res/menu/: menu_main.xml
ProjectEXE/app/src/main/res/values/: themes.xml
ProjectEXE/app/src/main/res/xml/: network_security_config.xml
ProjectEXE/attached_assets/: Pasted--Only-the-Generate-Text-nodes-take-prompts-in-the-sense_1776988577942.txt
ProjectEXE/gradle/: libs.versions.toml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: avatar_renderer.html
app/src/main/assets/characters/: default.json  fait.json
app/src/main/assets/web/: vrm_renderer.html
app/src/main/cpp/: CMakeLists.txt  exe_jni.cpp  llama-android.cpp  llama_jni.cpp
app/src/main/java/com/android/exe/: AndroidExeApp.kt
app/src/main/kotlin/com/android/exe/: AccessibilityService.kt  FilePickerUtils.kt  LlamaManager.kt  MainActivity.kt  MainApplication.kt  PetForegroundService.kt  PetNameDialog.kt  PreferencesManager.kt  SettingsActivity.kt  SetupActivity.kt
app/src/main/kotlin/com/projectexe/: MainActivity.kt  ProjectEXEApplication.kt
app/src/main/kotlin/com/projectexe/api/: OpenRouterClient.kt
app/src/main/kotlin/com/projectexe/bridge/: AnimationBridge.kt
app/src/main/kotlin/com/projectexe/character/: CharacterCard.kt
app/src/main/kotlin/com/projectexe/overlay/: OverlayService.kt
app/src/main/kotlin/com/projectexe/settings/: SettingsActivity.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  activity_setup.xml  dialog_pet_name.xml  setup_screen_config.xml  setup_screen_permissions.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: colors.xml  styles.xml
app/src/main/res/xml/: accessibility_service_config.xml  data_extraction_rules.xml  device_filter.xml  file_provider_paths.xml
gradle/: libs.versions.toml
(+47 files in other folders)
